--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.17)
 project(exqudens_cpp_cmake_example VERSION 1.0.0)
 
-# configuration --------------------------------------------------
+######################################################################
+# configuration ######################################################
+######################################################################
 
-# configuration extensions
+# extensions
 if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/extension.cmake")
     file(
         DOWNLOAD
@@ -15,19 +17,22 @@ if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/extension.cmake")
 endif()
 include(extension.cmake)
 
-# dependencies targets variables
-set_if_not_defined(DEPENDENCIES_MODE "QUIET") # 'QUIET' or 'REQUIRED' or 'EXACT'
+# configuration variables
+set_if_not_defined(COMPILE_DEPENDENCIES_MODE "QUIET") # 'QUIET' or 'REQUIRED' or 'EXACT'
+set_if_not_defined(TEST_DEPENDENCIES_MODE "QUIET") # 'QUIET' or 'REQUIRED' or 'EXACT'
 
-# dependencies targets --------------------------------------------------
+######################################################################
+# install dependency targets #########################################
+######################################################################
 
-# dependencies targets extensions
+# extensions
 include(ExternalProject)
 
-# dependencies targets variables
+# variables
 set_if_not_defined(DOWNLOADS_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/downloads")
 set_if_not_defined(PACKAGES_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/packages")
 
-# (optional) dependency target 'pkg-config-lite'
+# (optional compile) install dependency target 'pkg-config-lite'
 ExternalProject_Add(pkg-config-lite
     DOWNLOAD_DIR      "${DOWNLOADS_PREFIX}/pkg-config-lite-0.28.1"
     DOWNLOAD_NAME     "archive.zip"
@@ -41,7 +46,7 @@ ExternalProject_Add(pkg-config-lite
     INSTALL_COMMAND   ${CMAKE_COMMAND} -E copy_directory <SOURCE_DIR> <INSTALL_DIR>
 )
 
-# dependency target 'gtest-gmock'
+# (test) install dependency target 'gtest-gmock'
 ExternalProject_Add(gtest-gmock
     DOWNLOAD_DIR        "${DOWNLOADS_PREFIX}/gtest-gmock-1.10.0-custom"
     DOWNLOAD_NAME       "archive.zip"
@@ -53,24 +58,45 @@ ExternalProject_Add(gtest-gmock
     TEST_BEFORE_INSTALL TRUE
 )
 
+# install dependency target 'install-all-dependencies'
+ExternalProject_Add(install-all-dependencies
+    EXCLUDE_FROM_ALL  TRUE
+    DOWNLOAD_COMMAND  ""
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND     ""
+    TEST_COMMAND      ""
+    INSTALL_COMMAND   ""
+    DEPENDS
+        pkg-config-lite
+        gtest-gmock
+)
+
+# install dependency target 'install-test-dependencies'
+ExternalProject_Add(install-test-dependencies
+    EXCLUDE_FROM_ALL  TRUE
+    DOWNLOAD_COMMAND  ""
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND     ""
+    TEST_COMMAND      ""
+    INSTALL_COMMAND   ""
+    DEPENDS
+        gtest-gmock
+)
+
 # update search path
 list(APPEND CMAKE_PREFIX_PATH
     "${PACKAGES_PREFIX}/pkg-config-lite-0.28.1"
     "${PACKAGES_PREFIX}/gtest-gmock-1.10.0-custom"
 )
 
-# dependencies --------------------------------------------------
-
-# dependency 'PkgConfig'
-find_package(PkgConfig "0.28" ${DEPENDENCIES_MODE})
-
-# dependency 'GTest'
-find_package(GTest "1.10.0" ${DEPENDENCIES_MODE})
-
-# project --------------------------------------------------
+######################################################################
+# main ###############################################################
+######################################################################
 
 # variables
 set(CMAKE_CXX_STANDARD 20)
+
+# libraries ------------------------------
 
 # declare library
 add_library(ExqudensExample SHARED)
@@ -81,6 +107,8 @@ target_sources(ExqudensExample
     PRIVATE src/main/cpp/exqudens/example/StringUtils.hpp
             src/main/cpp/exqudens/example/StringUtils.cpp
 )
+
+# executables ------------------------------
 
 # declare executable
 add_executable(ExqudensExampleCPP)
@@ -94,6 +122,26 @@ target_link_libraries(ExqudensExampleCPP
     PRIVATE ExqudensExample
 )
 
+######################################################################
+# test ###############################################################
+######################################################################
+
+# dependencies ------------------------------
+
+# dependency 'PkgConfig'
+#find_package(PkgConfig "0.28" ${TEST_DEPENDENCIES_MODE})
+
+# dependency 'GTest'
+find_package(GTest "1.10.0" ${TEST_DEPENDENCIES_MODE})
+
+# complete configuration if dependency not found
+if(NOT GTest_FOUND)
+    message(STATUS "Some test dependency not found: SKIP TEST TARGETS")
+    return()
+endif()
+
+# libraries ------------------------------
+
 # declare test library
 add_library(ExqudensExampleTest SHARED)
 target_include_directories(ExqudensExampleTest
@@ -103,12 +151,15 @@ target_include_directories(ExqudensExampleTest
 target_sources(ExqudensExampleTest
     PRIVATE src/test/cpp/exqudens/example/test/Runner.hpp
             src/test/cpp/exqudens/example/test/Runner.cpp
-            src/test/cpp/exqudens/example/test/StringUtilsTests.hpp
-            src/test/cpp/exqudens/example/test/StringUtilsTests.cpp
+            src/test/cpp/exqudens/example/test/StringUtilsTestSuite.hpp
 )
 target_link_libraries(ExqudensExampleTest
-    PRIVATE ExqudensExample
+    PRIVATE GTest::GTest
+            GTest::Main
+            ExqudensExample
 )
+
+# executables ------------------------------
 
 # declare test executable
 add_executable(TestExqudensExampleCPP)
@@ -126,5 +177,6 @@ target_link_libraries(TestExqudensExampleCPP
 enable_testing()
 
 # add tests
-add_test("StringUtilsTests.test_1" TestExqudensExampleCPP "StringUtilsTests.test_1")
+add_test("StringUtilsTestSuite.test_1" TestExqudensExampleCPP "--gtest_filter=StringUtilsTestSuite.test_1")
+add_test("StringUtilsTestSuite.test_2" TestExqudensExampleCPP "--gtest_filter=StringUtilsTestSuite.test_2")
 add_test("main" ExqudensExampleCPP)
